--- a/public/style/style.css
+++ b/public/style/style.css
@@ -7,7 +7,7 @@ body{
     background-color: black;
 }
 #app{
-    width: 100vw;
+    /*width: 100vw;*/
     max-width: 1920px;
     height: 100vh;
     overflow: hidden;
@@ -16,23 +16,25 @@ body{
 
 #ui{
     width: 100%;
+    max-width: 1920px;
+    aspect-ratio: 2 / 1;
     height: 100%;
+    max-height: 960px;
     /*background-color: rgb(255, 0, 0, 0.5);*/
     position: absolute;
-    left: 0;
     top: 0;
     pointer-events: none;
     overflow: hidden;
 }
 
 #inventaire{
-    width: 20vw;
+    width: 20%;
     max-height: 100vh;
     position: absolute;
     right: 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: flex-start;
     gap: 2em;
     overflow-y: scroll;
@@ -41,6 +43,7 @@ body{
     margin-bottom: 10em;
     opacity: 50%;
     scrollbar-width: none;
+    padding-right: 20px;
 }
 
 #inventaire:hover{
@@ -52,7 +55,8 @@ body{
 }
 
 .inventory-object{
-    width: 40%;
+    width: 150px;
+    height: 150px;
     height: 10em;
     background-color: white;
 }
