--- a/public/style/style.css
+++ b/public/style/style.css
@@ -58,7 +58,15 @@ body{
     width: 150px;
     height: 150px;
     height: 10em;
-    background-color: white;
+    background: url("../sprites/Object_BG.png");
+    background-size: contain;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.object-image{
+    width: 80%;
 }
 
 #pause{
