--- a/public/style/style.css
+++ b/public/style/style.css
@@ -126,6 +126,7 @@ body{
     height: 100%;
     justify-content: center;
     align-items: center;
+    pointer-events: auto;
 }
 
 #interact-window{
