--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Micro+5&display=swap');
+@font-face {
+    font-family: "Jersey15";
+    src: url("Jersey15-Regular.ttf");
+}
 
 *{
     margin: 0;
@@ -9,7 +12,6 @@ body{
     background-color: black;
 }
 #app{
-    /*width: 100vw;*/
     max-width: 1920px;
     height: 100vh;
     overflow: hidden;
@@ -22,7 +24,6 @@ body{
     aspect-ratio: 2 / 1;
     height: 100%;
     max-height: 960px;
-    /*background-color: rgb(255, 0, 0, 0.5);*/
     position: absolute;
     top: 0;
     bottom: 0;
@@ -91,13 +92,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "Micro 5", serif;
+    font-family: "Jersey15";
 }
 
 #unlock-window{
     width: 100%;
     height: 100%;
-    /*background-color: grey;*/
     position: absolute;
     flex-direction: column;
     justify-content: center;
@@ -110,7 +110,7 @@ body{
     background-color: black;
     color: white;
     padding: 2em;
-    font-family: "Micro 5", serif;
+    font-family: "Jersey15";
 }
 
 #unlock-title{
@@ -132,11 +132,11 @@ body{
 #interact-window{
     margin-right: 400px;
     width: 1000px;
-    height: 40%;
+    height: 50%;
     padding: 1em;
     background-color: black;
     color: white;
-    font-family: "Micro 5", serif;
+    font-family: "Jersey15";
     font-size: 3rem;
 }
 
@@ -144,6 +144,7 @@ body{
     width: 150px;
     height: 150px;
     border: solid white 5px;
+    margin-top: 20px;
 }
 
 .unpaused{
